<resources>
    <string name="app_name">OrderFoodApp</string>
    <string name="tenDangNhap">Tên đăng nhập</string>
    <string name="nhapMatKhau">Nhập mật khẩu</string>
    <string name="nhapNgaySinh">Nhập ngày sinh</string>
    <string name="nhapEmail">Nhập địa chỉ email</string>
    <string name="dongY">Đồng ý</string>
    <string name="thoat">Thoát</string>
    <string name="dangKy">Đăng Ký</string>
    <string name="xacNhanMatKhau">Xác nhận mật khẩu</string>
    <string name="dangNhap">Đăng Nhập</string>
    <string name="nav_home">Home</string>
    <string name="nav_hoadon">Hóa Đơn</string>
    <string name="nav_lichsu">Lịch Sử Đơn Hàng</string>
    <string name="nav_baocao">Báo cáo cuối ngày</string>
    <string name="nav_open">Drawer Open</string>
    <string name="nav_close">Drawer Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
