<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".DangKyActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="10dp"
        android:text="@string/dangKy"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/lnKhungDangKy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        tools:ignore="ExtraText,MissingConstraints">

        <EditText
            android:id="@+id/edtTenDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:hint="@string/tenDangNhap"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            />

        <EditText
            android:id="@+id/edtMatKhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="10dp"
            android:hint="@string/nhapMatKhau"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/edtXacNhanMatKhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="10dp"
            android:hint="@string/xacNhanMatKhau"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

        <RadioGroup
            android:id="@+id/radGroupGioiTinh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radGioiTinhNam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:textSize="20sp"
                android:text="Nam" />

            <RadioButton
                android:id="@+id/radGioiTinhNu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:textSize="20sp"
                android:text="Nữ" />
        </RadioGroup>

        <EditText
            android:id="@+id/edtNgaySinh"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/calendar"
            android:drawablePadding="10dp"
            android:hint="@string/nhapNgaySinh"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/edtCCCD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/idcard"
            android:drawablePadding="10dp"
            android:hint="@string/nhapCCCD"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:gravity="top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="100dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btnDongY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/lime"
            android:padding="10dp"
            android:text="@string/dongY" />

        <Button
            android:id="@+id/btnThoat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/organe"
            android:padding="10dp"
            android:text="@string/thoat" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>